# kbashprompt

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/modules/: mod.rs  ps2.rs
src/modules/ps1/: battery.rs  current_dir.rs  current_time.rs  git_env.rs  java_version.rs  mod.rs  rust_version.rs  system_load.rs
