# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "kbashprompt"
version = "0.1.0"
authors = ["Paul Horn <ǝp ʇop ɹǝʞlɐʍʇnuʞ ʇɐ ɹǝdolǝʌǝp>"]
description = "Produce a PS1 prompt for bash"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
colorful = "0.2.1"
git2 = { version = "0.14.4", default-features = false }
libc = "0.2.119"
macsmc = "0.1.7"
num_cpus = "1.13.1"

[dependencies.time]
version = "0.3.7"
default-features = false
features = ["std", "local-offset"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
codegen-units = 1
rpath = false
